<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".activities.FramingActivity"
	android:orientation="horizontal"
	android:baselineAligned="false">

	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="440dp"
		android:layout_height="match_parent"
		android:baselineAligned="false"
		android:layout_weight="0.13">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_settings"
			android:id="@+id/textView"
			android:layout_below="@+id/radio_group_second"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

		<RadioGroup
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/radio_group"
			android:orientation="horizontal"
			android:layout_below="@+id/textView"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_session_time"
				android:id="@+id/radio_btn_time"
				android:onClick="onModeRadioButtonClicked"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_treatment_level"
				android:id="@+id/radio_btn_level"
				android:onClick="onModeRadioButtonClicked"/>
		</RadioGroup>


		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/edit_text_setting_value"
			android:inputType="text"
			android:hint="@string/str_please_input"
			android:layout_below="@+id/radio_group"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>


		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/text_view_preview"
			android:hint="@string/str_frame_preview"
			android:singleLine="true"
			android:layout_below="@+id/btn_framing"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_forge"
			android:id="@+id/btn_framing"
			android:layout_below="@+id/edit_text_setting_value"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_send"
			android:id="@+id/btn_send"
			android:layout_marginTop="34dp"
			android:layout_below="@+id/text_view_preview"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

		<RadioGroup
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/radio_group_second"
			android:orientation="horizontal"
			android:layout_below="@+id/text_port"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true">

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_chn_1"
				android:id="@+id/radio_btn_port1"
				android:onClick="onChannelRadioButtonClicked"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_chn_2"
				android:id="@+id/radio_btn_port2"
				android:onClick="onChannelRadioButtonClicked"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_chn_3"
				android:id="@+id/radio_btn_port3"
				android:onClick="onChannelRadioButtonClicked"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_chn_4"
				android:id="@+id/radio_btn_port4"
				android:onClick="onChannelRadioButtonClicked"/>

			<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_chn_5"
				android:id="@+id/radio_btn_port5"
				android:onClick="onChannelRadioButtonClicked"/>
		</RadioGroup>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_port"
			android:text="@string/str_chn"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

	</RelativeLayout>

	<RelativeLayout
		android:orientation="vertical"
		android:layout_width="357dp"
		android:layout_height="match_parent"
		android:weightSum="0"
		android:layout_weight="0.23">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/text_raw_frame"
			android:hint="@string/str_frame"
			android:layout_below="@+id/textView3"
			android:layout_toRightOf="@+id/textView3"
			android:layout_toEndOf="@+id/textView3"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/text_pass_or_not"
			android:hint="@string/str_pass_or_not"
			android:layout_below="@+id/text_raw_frame"
			android:layout_marginTop="31dp"
			android:layout_alignLeft="@+id/text_raw_frame"
			android:layout_alignStart="@+id/text_raw_frame"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/text_parameters"
			android:hint="@string/str_parameters"
			android:layout_below="@+id/text_pass_or_not"
			android:layout_marginTop="26dp"
			android:layout_alignLeft="@+id/text_pass_or_not"
			android:layout_alignStart="@+id/text_pass_or_not"/>

		<Switch
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_port_status"
			android:id="@+id/switch_serial_port"
			android:checked="false"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_received"
			android:layout_below="@+id/switch_serial_port"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_marginTop="25dp"
			android:id="@+id/textView3"/>
	</RelativeLayout>
</LinearLayout>