<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".activities.MultiSetActivity"
	android:orientation="vertical"
	>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_selecting_chn"
		android:id="@+id/textView4"/>

	<RadioGroup
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/radio_group_settings"
		android:orientation="horizontal"
		android:layout_marginTop="30dp"
		android:layout_below="@+id/textView4"
		android:layout_alignRight="@+id/btn_setting_plus"
		android:layout_alignEnd="@+id/btn_setting_plus">

		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_chn_1"
			android:id="@+id/radio_btn_chn1"
			android:onClick="onRadioButtonClicked"/>

		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_chn_2"
			android:id="@+id/radio_btn_chn2"
			android:onClick="onRadioButtonClicked"/>

		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_chn_3"
			android:id="@+id/radio_btn_chn3"
			android:onClick="onRadioButtonClicked"/>

		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_chn_4"
			android:id="@+id/radio_btn_chn4"
			android:onClick="onRadioButtonClicked"/>

		<RadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/str_chn_5"
			android:id="@+id/radio_btn_chn5"
			android:onClick="onRadioButtonClicked"/>
	</RadioGroup>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_treatment_level"
		android:id="@+id/textView5"
		android:layout_below="@+id/radio_group_settings"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="30dp"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_session_time"
		android:id="@+id/textView6"
		android:layout_below="@+id/btn_setting_minus"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="34dp"/>


		<NumberPicker
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/numPicker_hr"
			android:layout_marginTop="33dp"
			android:layout_below="@+id/textView6"
			android:layout_toLeftOf="@+id/btn_setting_cancel"
			android:layout_toStartOf="@+id/btn_setting_cancel"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/str_hour"
			android:gravity="center"
			android:id="@+id/textView3"
			android:layout_alignTop="@+id/numPicker_hr"
			android:layout_alignLeft="@+id/btn_setting_cancel"
			android:layout_alignStart="@+id/btn_setting_cancel"
			android:layout_above="@+id/btn_setting_confirm"/>
		<NumberPicker
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/numPicker_min"
			android:layout_alignTop="@+id/textView3"
			android:layout_toRightOf="@+id/textView3"
			android:layout_toEndOf="@+id/textView3"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/str_min"
			android:gravity="center"
			android:id="@+id/textView2"
			android:layout_alignTop="@+id/numPicker_min"
			android:layout_toRightOf="@+id/numPicker_min"
			android:layout_toEndOf="@+id/numPicker_min"
			android:layout_above="@+id/btn_setting_confirm"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_plus_sign"
		android:id="@+id/btn_setting_plus"

		android:minHeight="0dp"
		android:minWidth="0dp"
		android:layout_below="@+id/textView5"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_minus_sign"
		android:id="@+id/btn_setting_minus"

		android:minHeight="0dp"
		android:minWidth="0dp"
		android:layout_alignTop="@+id/btn_setting_plus"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_btn_confirm"
		android:id="@+id/btn_setting_confirm"
		android:layout_below="@+id/numPicker_hr"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_marginTop="31dp"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_cancel"
		android:id="@+id/btn_setting_cancel"
		android:layout_alignTop="@+id/btn_setting_confirm"
		android:layout_centerHorizontal="true"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_go_back"
		android:id="@+id/btn_setting_back"
		android:layout_alignBottom="@+id/btn_setting_cancel"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/text_setting_level"
		android:background="#8b78413f"
		android:layout_alignBottom="@+id/btn_setting_plus"
		android:layout_centerHorizontal="true"
		android:width="100dp"
		android:layout_alignTop="@+id/btn_setting_plus"
		android:text="@string/str_level_default"
		android:gravity="center_vertical|center_horizontal"/>


</RelativeLayout>
