<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".activities.DebugActivity"
	android:orientation="vertical">

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_framing_test"
		android:id="@+id/btn_framing_test"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_sweep_gradient_view"
		android:id="@+id/btn_sweep_gradient"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/str_temperature_meter_view"
		android:id="@+id/btn_temperature_meter"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/btn_finish_debug"
		android:text="@string/str_go_back"/>

</LinearLayout>
