<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.bjghhnt.app.treatmentdevice.activities.BrowserActivity">

	<WebView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/web_view_news"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/str_go_back"
		android:id="@+id/btn_back_from_browser"
		android:layout_gravity="bottom"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="?android:attr/buttonStyleSmall"
			android:id="@+id/btn_browser_backward"
			android:text="@string/str_navigation_backward"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="?android:attr/buttonStyleSmall"
			android:id="@+id/btn_browser_forward"
			android:text="@string/str_navigation_forward"/>
	</LinearLayout>
</FrameLayout>
